static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Condensed:wght@300;400;700&display=swap');
/* -_-_-_-_-_-_-_-_-_-_ Headings _-_-_-_-_-_-_-_-_-_- */

h1, h2, h3, h4, h5{
    font-family: "Roboto Condensed", sans-serif;
    color: #153243;;
}
p {
    font-family: "serrat", sans-serif;
}
html,body
{
    width: 100%;
    overflow-x: hidden; 
}

.header-title{
    font-family: "Roboto Condensed", sans-serif;
}
a {
    font-family: "serrat", sans-serif;
}
body{
    overflow-x: hidden;
}
/* ___________ Messages ___________ */
.messages_bar{
    background-color: #153243;
    color: white;
    text-align: center;
}
/* ___________ Buttons ___________ */
.main_btn{
    background: white;
    border: solid 1px #153243 !important;
    border-radius: 0 !important;
}
.main_btn:hover{
    background: #153243 !important;
    color: white !important;
}
.invert_main_btn{
    background: #153243 !important;
    border: solid 1px #153243 !important;
    color: white !important;
    border-radius: 0 !important;
}
.invert_main_btn:hover{
    background: white !important;
    color: #153243 !important;
}
.decrement_button{
    background-color: white;
    color: #153243;
    border-right: 1px solid lightgrey;
}
.decrement_button:hover{
    background-color: #153243;
    color:white;
}
.increment_button{
    background-color: white;
    color: #153243;
    border-left: 1px solid lightgrey;
}
.increment_button:hover{
    background-color: #153243;
    color:white;
}
/* ___________ Main Nav Bar & Footer ___________ */
.nav_row, .footer_row{
    background-color: #153243;
}
.nav_text, .footer_text{
    color: white;
}
.nav_text:hover, .nav_icon:hover{
    color: lightgray;
}
.dropdown-item, 
.fa-chevron-down, 
.product-menu, 
.mobile_top_header{
    color: #153243 !important;
}
.dropdown-item:hover{
    background: whitesmoke;
}
.product-menu{
    font-family: "Roboto Condensed", sans-serif;
    color: #153243;;
}
.footer_text{
    font-size: 10px;
}
.footer_text, h5{
    padding-top: 5px;
}
.fa-raspberry-pi{
    padding-left: 10px;
}
.nav_search{
    background-color: white;
}
.fa-shopping-cart, .fa-user, .fa-tag{
    color: white !important;
}
.nav_right_col{
    padding-right: 35px;
}
.footer_left{
    padding-left: 50px;
}
.footer_left, h5{
    color: white !important;
}
.footericons{
    font-size: 20px;
    padding-left: 15px;
    text-align: center;
    padding-bottom: 10px;
}
.footericons:hover{
    color: lightgray;
}
html {
    height: 100%;
    box-sizing: border-box;
  }
  body {
    position: relative;
    margin: 0;
    padding-bottom: 6rem;
    min-height: 100%;
  }
.footer {
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
}

@media only screen and (min-width: 768px) {
    .footer_text{
        font-size: 20px;
    }
    .footer_text, p{
        font-size: 15px;
    }
    .footer_text, h5{
        padding-top: 10px;
    }
    .footericons{
        font-size: 35px;
        padding-left: 50px;
        text-align: center;
    }
}

/* ___________ Mobile Header ___________ */

@media screen and (max-width: 992px) {
    .mobile_header{
        background-color: #153243;
    }
    .dropdown-menu{
        background-color: #153243;
    }
    .dropdown-item, 
    .fa-chevron-down, 
    .product-menu, 
    .mobile_top_header{
        color: white !important;
    }
    .dropdown-item:hover{
        background-color: #153243 !important;
    }
    .navbar-toggler{
        border-color: white;
    }
    .btn-success{
        background-color: green;
    }
    .cart_icon_mobile{
        padding-top: 0px !important;
        padding-bottom: 0px !important;
    }
  }
  .mobile-ul{
      padding: 0px !important;
      margin: 0px !important;
      border: none !important;
  }
  

/* ___________ Toasts & Messages ___________ */
.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}
.custom-toast {
    overflow: visible;
}
.toast-capper {
    height: 2px;
}

